--- a/EasyVis/src/application/MainInterface.fxml
+++ b/EasyVis/src/application/MainInterface.fxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,7 +32,7 @@
          <children>
             <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="1">
                <children>
-                  <Button fx:id="loadButton" mnemonicParsing="false" onAction="#handleLoadButtomPressed" text="Load Data" />
+                  <Button fx:id="loadButton" mnemonicParsing="false" onAction="#handleLoadButtonPressed" text="Load Data" />
                </children>
             </HBox>
             <Text fx:id="statusText" strokeType="OUTSIDE" strokeWidth="0.0" />
@@ -35,19 +41,65 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
-        <content>
-          <AnchorPane>
-               <children>
-                  <TableView fx:id="dataTable" prefHeight="400.0" prefWidth="798.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+      <TabPane tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+        <tabs>
+          <Tab text="Data">
+               <content>
+                  <ScrollPane fitToHeight="true" fitToWidth="true">
+                    <content>
+                      <AnchorPane>
+                           <children>
+                              <TableView fx:id="dataTable" prefHeight="400.0" prefWidth="798.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="C1" />
+                                  <TableColumn prefWidth="75.0" text="C2" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+               </content>
+            </Tab>
+          <Tab text="Bar Graph">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <GridPane alignment="CENTER" hgap="10.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="800.0" vgap="10.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnIndex="2">
+                                 <children>
+                                    <Button fx:id="barGraphButton" mnemonicParsing="false" onAction="#handleBarGraphButtonPressed" text="Load Graph" />
+                                 </children>
+                              </HBox>
+                              <Text fx:id="statusText1" strokeType="OUTSIDE" strokeWidth="0.0" />
+                              <ComboBox fx:id="barX" prefWidth="150.0" promptText="Select X-Axis" />
+                              <ComboBox fx:id="barY" prefWidth="150.0" promptText="Select Y-Axis" GridPane.columnIndex="1" />
+                           </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </GridPane>
+                        <BarChart fx:id="barChart" VBox.vgrow="ALWAYS">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </BarChart>
+                     </children>
+                  </VBox>
+               </content></Tab>
+        </tabs>
+      </TabPane>
    </children>
 </VBox>
